--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Azure Apartments, Sarande, Albania</title>
-    <meta name="description"
-        content="For any inquiries, reservations, or assistance, feel free to reach out to our friendly team at Azure Apartments in Sarande, Albania. We're here to ensure your stay with us is comfortable and memorable.">
-    <meta name="keywords"
-        content="Contact - Azure Apartments, Sarande, Albania, Apartment, Hotel, Beachfront Accommodation, Family Room, Wifi, Sea View, Accommodation Contact">
+    <meta name="description" content="Reach out to Azure Apartments in Sarande, Albania for inquiries and reservations. Our dedicated team is here to make your stay comfortable and unforgettable.">
+    <meta name="keywords" content="Contact - Azure Apartments, Sarande, Albania, Comfortable stay , Hotel , Apartament , Couple Apartament, Wifi , Tv , Summer , Best Place , Holidays ">
     <meta name="google-site-verification" content="VBBXbdI32-JaBuuOkWz5NeAeNk-Iu5e2lK04XvJz4yU" />
     <link rel="icon" href="assets/icon/logo-black.png" />
     <!--FontAwesome-->
@@ -18,12 +17,13 @@
     <!--My Style-->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar navbar-expand-lg header-nav fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img class="logo1" src="assets/icon/logo-black.png" alt="logo" width="100px">
+                    <img class="logo1" src="assets/icon/logo-white.png" alt="logo" width="75px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -52,18 +52,22 @@
                             <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
                             <div class="underline"></div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link flag" href="contact-sq.html">
+                                <img src="assets/icon/ALB.png" alt="ALB Flag" height="20">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link flag" href="contact.html">
+                                <img src="assets/icon/GBR.png" alt="GBR Flag" height="20">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a style="text-decoration: none;" href="contact.html">
+                                <button id="button" class="btn-3" style="letter-spacing: 2px;">BOOK NOW</button>
+                            </a>
+                        </li>
                     </ul>
-                    <div class="prova">
-                        <a class="nav-link flag" href="contact-sq.html">
-                            <img src="assets/icon/ALB.png" alt="ALB Flag" height="20">
-                        </a>
-                        <a class="nav-link flag" href="contact.html">
-                            <img src="assets/icon/GBR.png" alt="GBR Flag" height="20">
-                        </a>
-                        <a style="text-decoration: none;" href="contact.html">
-                            <button id="button" class="btn-3" style="letter-spacing: 2px;">BOOK NOW</button>
-                        </a>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -72,7 +76,7 @@
         <section id="contact-head">
             <div class="container">
                 <div class="row py-5">
-                    <div class="col-md-12 d-flex flex-column" style="margin-top: 150px;">
+                    <div class="col-md-12 d-flex flex-column" style="margin-top: 200px;">
                         <div>
                             <h1 class="display-1" style="font-weight: bold;">Contact Us</h1>
                             <p class="hs">
@@ -84,12 +88,14 @@
                 </div>
             </div>
         </section>
-        <section class="contacts" style="padding-top: 100px; padding-bottom: 100px;">
-            <div class="container">
+        <section class="contacts" style="padding-top: 75px; padding-bottom: 50px;">
+            <div class="container" style="padding-bottom: 50px;">
                 <div class="row mb-4">
                     <div class="col-lg-12 text-center">
-                        <h6 class="tagline">GET IN TOUCH</h6>
-                        <h2 class="display-6">Our Contact Information</h2>
+                        <h6 class="tagline">GET IN TOUCH
+                        </h6>
+                        <h2 class="display-6">Our Contact Information
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -144,21 +150,26 @@
                             <div class="footer-widget mb-4">
                                 <h2 class="heading-2 logo" id="footer-logo">
                                     <a class="navbar-brand" href="index.html">
-                                        <img src="assets/icon/logo-white.png" width="120px">
+                                        <img src="assets/icon/logo-white.png" width="75px">
                                     </a>
                                 </h2>
-                                <p>Boasting a balcony, air conditioning and views of sea, Azure Apartments is set in
-                                    Sarande, 200 m from Sarande Beach. Welcome to our Apartments.</p>
+                                <p>Experience tranquility and modern comfort at Azure Apartments. Enjoy cozy
+                                    stay with Wi-Fi, private balconies, and kitchenettes for an
+                                    unforgettable stay.Welcome to our hotel.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <h4>Contact Us</h4>
+                            <div class="tlt">
+                                <h4>Contact Us</h4>
+                            </div>
                             <ul class="conta">
                                 <li><i class="fa fa-map-marker" aria-hidden="true"></i><a
                                         href="https://maps.app.goo.gl/tHCNyGsMcFNPkyWB7" class="text-white m-0 p-0"
                                         style="text-decoration: none;">&nbsp;&nbsp;Road Butrinti, Sarande</a></li>
                                 <li><i class="fas fa-phone" style="color: white;"></i><a href="tel:+355696986278"
-                                        class="text-white m-0 p-0" style="text-decoration: none;">+355 (0) 696986278</a>
+                                        class="text-white m-0 p-0" style="text-decoration: none;">+355 (0)
+                                        696986278</a>
                                 </li>
                                 <li><i class="fas fa-envelope" style="color: white;"></i><a
                                         href="mailto: azureapartments.sr@gmail.com" class="text-white m-0 p-0"
@@ -166,12 +177,16 @@
                             </ul>
                         </div>
                         <div class="col-lg-3">
-                            <h4>Useful Links</h4>
+                            <div class="tlt">
+                                <h4>Useful Links</h4>
+                            </div>
                             <ul class="link_menu">
                                 <li class="mb-2"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                                 <li class="mb-2"><a href="rooms.html"><i class="fas fa-bed"></i> Rooms</a></li>
-                                <li class="mb-2"><a href="gallery.html"><i class="fas fa-images"></i> Gallery</a></li>
-                                <li class="mb-2"><a href="about.html"><i class="fas fa-info-circle"></i> About Us</a>
+                                <li class="mb-2"><a href="gallery.html"><i class="fas fa-images"></i> Gallery</a>
+                                </li>
+                                <li class="mb-2"><a href="about.html"><i class="fas fa-info-circle"></i>
+                                        About Us</a>
                                 </li>
                                 <li class="active"><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
                             </ul>
@@ -205,4 +220,5 @@
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
