--- a/rooms.html
+++ b/rooms.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rooms - Azure Apartments , Sarande , Albania</title>
-    <meta name="description"
-        content="Experience the comfort of Azure Apartments in Sarande, Albania, offering cozy 1-bedroom beachfront accommodation with stunning sea views, free WiFi, and convenient parking for a modern and comfortable stay near Sarande Main Beach.">
-    <meta name="keywords"
-        content="Rooms - Azure Apartments , Sarande , Albania , Apartment , Hotel , Beachfront Accommodation , Family Room , Wifi , Sea View , Cozy 1-bedroom apartment , Convenient Parking , ">
+    <meta name="description" content="Discover the allure of coastal luxury at Azure Apartments in Sarandë, offering beachfront accommodation with sea views, modern amenities, and easy booking options for your next vacation.">
+    <meta name="keywords" content="Rooms - Azure Apartments , Sarande , Albania , Apartment , Hotel , Vacation , Family Room , Wifi , Sea View , Clean rooms , Nice Beds ">
     <meta name="google-site-verification" content="VBBXbdI32-JaBuuOkWz5NeAeNk-Iu5e2lK04XvJz4yU" />
     <link rel="icon" href="assets/icon/logo-black.png" />
     <!-- Font Awesome -->
@@ -29,7 +27,7 @@
         <nav class="navbar navbar-expand-lg header-nav fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img class="logo1" src="assets/icon/logo-black.png" alt="logo" width="100px">
+                    <img class="logo1" src="assets/icon/logo-white.png" alt="logo" width="75px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -58,18 +56,22 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                             <div class="underline"></div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link flag" href="rooms-sq.html">
+                                <img src="assets/icon/ALB.png" alt="ALB Flag" height="20">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link flag" href="rooms.html">
+                                <img src="assets/icon/GBR.png" alt="GBR Flag" height="20">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a style="text-decoration: none;" href="contact.html">
+                                <button id="button" class="btn-3" style="letter-spacing: 2px;">BOOK NOW</button>
+                            </a>
+                        </li>
                     </ul>
-                    <div class="prova">
-                        <a class="nav-link flag" href="gallery-sq.html">
-                            <img src="assets/icon/ALB.png" alt="ALB Flag" height="20">
-                        </a>
-                        <a class="nav-link flag" href="gallery.html">
-                            <img src="assets/icon/GBR.png" alt="GBR Flag" height="20">
-                        </a>
-                        <a style="text-decoration: none;" href="contact.html">
-                            <button id="button" class="btn-3" style="letter-spacing: 2px;">BOOK NOW</button>
-                        </a>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -78,7 +80,7 @@
         <section id="rooms-head">
             <div class="container">
                 <div class="row py-5">
-                    <div class="col-md-12 d-flex flex-column" style="margin-top: 150px;">
+                    <div class="col-md-12 d-flex flex-column" style="margin-top: 200px;">
                         <div>
                             <h1 class="display-1" style="font-weight: bold;">Rooms</h1>
                             <p class="hs">
@@ -105,13 +107,13 @@
                             <!-- Owl Carousel -->
                             <div class="owl-carousel owl-dots-white" id="room-carousel">
                                 <div class="item">
-                                    <img src="assets/image/1.png" alt="" width="655" height="496">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/image/2.png" alt="" width="655" height="496">
-                                </div>
-                                <div class="item">
                                     <img src="assets/image/3.png" alt="" width="655" height="496">
+                                </div>
+                                <div class="item">
+                                    <img src="assets/image/4.png" alt="" width="655" height="496">
+                                </div>
+                                <div class="item">
+                                    <img src="assets/image/8.png" alt="" width="655" height="496">
                                 </div>
                             </div>
                         </div>
@@ -144,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center" style="padding-top: 75px;">
+                <div class="row justify-content-center tt-75">
                     <div class="col-md-10 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
                         <div class="single-project">
                             <h4 class="pp">Triple Room With Balcony</h4>
@@ -176,31 +178,31 @@
                             <!-- Owl Carousel -->
                             <div class="owl-carousel owl-dots-white" id="room-carousel-1">
                                 <div class="item">
-                                    <img src="assets/image/1.png" alt="" width="655" height="496">
+                                    <img src="assets/image/10.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/2.png" alt="" width="655" height="496">
+                                    <img src="assets/image/13.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/3.png" alt="" width="655" height="496">
+                                    <img src="assets/image/14.png" alt="" width="655" height="496">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center" style="padding-top: 75px;">
+                <div class="row justify-content-center tt-75">
                     <div class="col-md-10 col-lg-6 col-xl-7">
                         <div class="offset-right-xl-15">
                             <!-- Owl Carousel -->
                             <div class="owl-carousel owl-dots-white" id="room-carousel-2">
                                 <div class="item">
-                                    <img src="assets/image/1.png" alt="" width="655" height="496">
+                                    <img src="assets/image/22.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/2.png" alt="" width="655" height="496">
+                                    <img src="assets/image/24.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/3.png" alt="" width="655" height="496">
+                                    <img src="assets/image/26.png" alt="" width="655" height="496">
                                 </div>
                             </div>
                         </div>
@@ -230,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center" style="padding-top: 75px;">
+                <div class="row justify-content-center tt-75">
                     <div class="col-md-10 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
                         <div class="single-project">
                             <h4 class="pp">Double Room With Balcony</h4>
@@ -262,31 +264,31 @@
                             <!-- Owl Carousel -->
                             <div class="owl-carousel owl-dots-white" id="room-carousel-3">
                                 <div class="item">
-                                    <img src="assets/image/1.png" alt="" width="655" height="496">
+                                    <img src="assets/image/29.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/2.png" alt="" width="655" height="496">
+                                    <img src="assets/image/32.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/3.png" alt="" width="655" height="496">
+                                    <img src="assets/image/34.png" alt="" width="655" height="496">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center" style="padding-top: 75px;">
+                <div class="row justify-content-center tt-75">
                     <div class="col-md-10 col-lg-6 col-xl-7">
                         <div class="offset-right-xl-15">
                             <!-- Owl Carousel -->
                             <div class="owl-carousel owl-dots-white" id="room-carousel-4">
                                 <div class="item">
-                                    <img src="assets/image/1.png" alt="" width="655" height="496">
+                                    <img src="assets/image/35.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/2.png" alt="" width="655" height="496">
+                                    <img src="assets/image/36.png" alt="" width="655" height="496">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/image/3.png" alt="" width="655" height="496">
+                                    <img src="assets/image/37.png" alt="" width="655" height="496">
                                 </div>
                             </div>
                         </div>
@@ -330,21 +332,26 @@
                             <div class="footer-widget mb-4">
                                 <h2 class="heading-2 logo" id="footer-logo">
                                     <a class="navbar-brand" href="index.html">
-                                        <img src="assets/icon/logo-white.png" width="120px">
+                                        <img src="assets/icon/logo-white.png" width="75px">
                                     </a>
                                 </h2>
-                                <p>Boasting a balcony, air conditioning and views of sea, Azure Apartments is set in
-                                    Sarande, 200 m from Sarande Beach. Welcome to our Apartments.</p>
+                                <p>Experience tranquility and modern comfort at Azure Apartments. Enjoy cozy
+                                    stay with Wi-Fi, private balconies, and kitchenettes for an
+                                    unforgettable stay.Welcome to our hotel.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <h4>Contact Us</h4>
+                            <div class="tlt">
+                                <h4>Contact Us</h4>
+                            </div>
                             <ul class="conta">
                                 <li><i class="fa fa-map-marker" aria-hidden="true"></i><a
                                         href="https://maps.app.goo.gl/tHCNyGsMcFNPkyWB7" class="text-white m-0 p-0"
                                         style="text-decoration: none;">&nbsp;&nbsp;Road Butrinti, Sarande</a></li>
                                 <li><i class="fas fa-phone" style="color: white;"></i><a href="tel:+355696986278"
-                                        class="text-white m-0 p-0" style="text-decoration: none;">+355 (0) 696986278</a>
+                                        class="text-white m-0 p-0" style="text-decoration: none;">+355 (0)
+                                        696986278</a>
                                 </li>
                                 <li><i class="fas fa-envelope" style="color: white;"></i><a
                                         href="mailto: azureapartments.sr@gmail.com" class="text-white m-0 p-0"
@@ -352,12 +359,16 @@
                             </ul>
                         </div>
                         <div class="col-lg-3">
-                            <h4>Useful Links</h4>
+                            <div class="tlt">
+                                <h4>Useful Links</h4>
+                            </div>
                             <ul class="link_menu">
                                 <li class="mb-2"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
                                 <li class="mb-2 active"><a href="rooms.html"><i class="fas fa-bed"></i> Rooms</a></li>
-                                <li class="mb-2"><a href="gallery.html"><i class="fas fa-images"></i> Gallery</a></li>
-                                <li class="mb-2"><a href="about.html"><i class="fas fa-info-circle"></i> About Us</a>
+                                <li class="mb-2"><a href="gallery.html"><i class="fas fa-images"></i> Gallery</a>
+                                </li>
+                                <li class="mb-2 "><a href="about.html"><i class="fas fa-info-circle"></i>
+                                        About Us</a>
                                 </li>
                                 <li class=""><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
                             </ul>
@@ -374,14 +385,14 @@
                 <div class="copyright">
                     <div class="text-center text-white p-2" style="background-color: #14151a;">
                         Copyright
-                        <script>document.write(new Date().getFullYear());</script> Azure Apartments | Powered By <a
-                            href="https://intermedia.al/"><img src="assets/icon/intermediaLogo1.png" class="img-fluid"
-                                width="110px" alt=""></a>
+                        <script>document.write(new Date().getFullYear());</script> Azure Apartments |
+                        Powered By <a href="https://intermedia.al/"><img src="assets/icon/intermediaLogo1.png"
+                                class="img-fluid" width="110px" alt=""></a>
                     </div>
                 </div>
             </div>
         </footer>
-    </main>
+</main>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
