--- a/index-sq.html
+++ b/index-sq.html
@@ -373,12 +373,10 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm "><a
-                                    class="thumbnail-creative-figure" href="assets/image/4.png"
-                                    data-lightgallery="item"><img src="assets/image/4.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure"data-lightgallery="item">
+                                    <img src="assets/image/4.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
-                                    <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Apartament
-                                            Ekselent</a></h5>
+                                    <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Apartament Ekselent</a></h5>
                                     <div class="thumbnail-creative-button"><a
                                             class="button button-md button-white button-1"
                                             href="gallery-sq.html">Eksploro</a></div>
@@ -389,12 +387,10 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/10.png"
-                                    data-lightgallery="item"><img src="assets/image/10.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/10.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
-                                    <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Dhoma Mbreslënëse</a>
-                                    </h5>
+                                    <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Dhoma Mbreslënëse</a></h5>
                                     <div class="thumbnail-creative-button"><a
                                             class="button button-md button-white button-1"
                                             href="gallery-sq.html">Eksploro</a>
@@ -406,9 +402,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/14.png"
-                                    data-lightgallery="item"><img src="assets/image/14.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/14.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Interior Spektakolar</a>
                                     </h5>
@@ -423,12 +418,10 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/30.png"
-                                    data-lightgallery="item"><img src="assets/image/30.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/30.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
-                                    <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Pajisje të
-                                            ndryshme</a>
+                                    <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Pajisje të ndryshme</a>
                                     </h5>
                                     <div class="thumbnail-creative-button"><a
                                             class="button button-md button-white button-1"
@@ -440,9 +433,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/35.png"
-                                    data-lightgallery="item"><img src="assets/image/35.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/35.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Dhoma komode</a>
                                     </h5>
@@ -457,9 +449,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/48.png"
-                                    data-lightgallery="item"><img src="assets/image/48.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/48.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Atmosferë miqësore</a>
                                     </h5>
