--- a/about-sq.html
+++ b/about-sq.html
@@ -222,9 +222,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm "><a
-                                    class="thumbnail-creative-figure" href="assets/image/4.png"
-                                    data-lightgallery="item"><img src="assets/image/4.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure"data-lightgallery="item">
+                                    <img src="assets/image/4.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Apartament Ekselent</a></h5>
                                     <div class="thumbnail-creative-button"><a
@@ -237,9 +236,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/10.png"
-                                    data-lightgallery="item"><img src="assets/image/10.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/10.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Dhoma Mbreslënëse</a></h5>
                                     <div class="thumbnail-creative-button"><a
@@ -253,9 +251,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/14.png"
-                                    data-lightgallery="item"><img src="assets/image/14.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/14.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Interior Spektakolar</a>
                                     </h5>
@@ -270,9 +267,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/30.png"
-                                    data-lightgallery="item"><img src="assets/image/30.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/30.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Pajisje të ndryshme</a>
                                     </h5>
@@ -286,9 +282,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/35.png"
-                                    data-lightgallery="item"><img src="assets/image/35.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/35.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery-sq.html">Dhoma komode</a>
                                     </h5>
@@ -303,9 +298,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/48.png"
-                                    data-lightgallery="item"><img src="assets/image/48.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/48.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Atmosferë miqësore</a>
                                     </h5>
@@ -440,7 +434,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-3">
-                            <h4>Vendodhja/h4>
+                            <h4>Vendodhja</h4>
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3062.4600885733266!2d20.01589557493456!3d39.86393098910081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMznCsDUxJzUwLjEiTiAyMMKwMDEnMDYuNSJF!5e0!3m2!1sen!2s!4v1716449213105!5m2!1sen!2s"
                                     width="100%" height="150" style="border: 0;" allowfullscreen="" loading="lazy"
