--- a/about.html
+++ b/about.html
@@ -235,9 +235,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm "><a
-                                    class="thumbnail-creative-figure" href="assets/image/4.png"
-                                    data-lightgallery="item"><img src="assets/image/4.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/4.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Excellent
                                             Apartaments</a></h5>
@@ -251,9 +250,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/10.png"
-                                    data-lightgallery="item"><img src="assets/image/10.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/10.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Best Rooms</a></h5>
                                     <div class="thumbnail-creative-button"><a
@@ -267,9 +265,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/14.png"
-                                    data-lightgallery="item"><img src="assets/image/14.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/14.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Spectacular Interior</a>
                                     </h5>
@@ -284,9 +281,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/30.png"
-                                    data-lightgallery="item"><img src="assets/image/30.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/30.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Diverse Amenities</a>
                                     </h5>
@@ -300,9 +296,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/35.png"
-                                    data-lightgallery="item"><img src="assets/image/35.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/35.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Comfortable Rooms</a>
                                     </h5>
@@ -317,9 +312,8 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="mt-top">
                             <article class="thumbnail thumbnail-creative thumbnail-sm"><a
-                                    class="thumbnail-creative-figure" href="assets/image/48.png"
-                                    data-lightgallery="item"><img src="assets/image/48.png" alt="" width="370"
-                                        height="303"></a>
+                                    class="thumbnail-creative-figure" data-lightgallery="item">
+                                    <img src="assets/image/48.png" alt="" width="370" height="303"></a>
                                 <div class="thumbnail-creative-caption">
                                     <h5 class="thumbnail-creative-title"><a href="gallery.html">Friendly Atmosphere</a>
                                     </h5>
