--- a/rooms-sq.html
+++ b/rooms-sq.html
@@ -370,7 +370,7 @@
                             </ul>
                         </div>
                         <div class="col-lg-3">
-                            <h4>Vendodhja/h4>
+                            <h4>Vendodhja</h4>
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3062.4600885733266!2d20.01589557493456!3d39.86393098910081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMznCsDUxJzUwLjEiTiAyMMKwMDEnMDYuNSJF!5e0!3m2!1sen!2s!4v1716449213105!5m2!1sen!2s"
                                     width="100%" height="150" style="border: 0;" allowfullscreen="" loading="lazy"
